# rs_STM32_board

./: Cargo.toml  Embeded.toml  README.md  memory.x
.cargo/: config.toml
images/: IMG_9734.heic
src/: main.rs
